src/pages/style.css
:root {
    --font-one: 'Great Vibes';
    --font-two: 'Indie Flower';
    /* --thru-black: rgba(44, 41, 54, 0.854); */
    --thru-black: rgba(241, 221, 221, .9);
    --border-color: rgb(176, 175, 175);

    /* New colors */
    --heading: rgb(170, 100, 120);
    --heading-two: rgb(80, 90, 100);
    --paragraph: rgb(80, 80, 80);
    --footer: rgb(200, 170, 170);

    --see-through-white: rgba(255, 255, 255, .4);
    --h3: rgb(170, 100, 120);
}

*,
*::before,
*::after {
    box-sizing: border-box;
}

html,
body {
    margin: 0;
    padding: 0;
    width: 100%;
    height: 100%;
    box-sizing: border-box;
    overflow-x: hidden;
}

body {
    background-image: url(/hd-1.jpg);
    background-size: cover;
    background-repeat: repeat;
    background-attachment: fixed;
    background-position: center center;
    color: var(--paragraph);
    font-family: var(--font-two);
}

.center {
    display: flex;
    justify-content: center;
    align-items: center;
}

h2 {
    font-family: var(--font-one);
    font-size: 80px;
    text-align: center;
    margin: 0;
    margin-top: 50px;
    margin-bottom: 15px;
    color: var(--heading);
    text-shadow:
        -0.5px -0.5px 0 black,
        0.5px -0.5px 0 black,
        -0.5px 0.5px 0 black,
        0.5px 0.5px 0 black;
}

#my-name {
    margin-bottom: 0;
}

#job-title {
    font-size: 25px;
}

h3 {
    position: relative;
    top: -10px;
    font-family: var(--font-two);
    text-align: center;
    margin-top: 0;
    margin-bottom: 50px;
    font-size: 35px;
    color: var(--h3);
    width: 100%;
    /* background-color: white; */
    /* border: .5px black solid; */
    /* text-shadow:
        -0.5px -0.5px 0 black,
        0.5px -0.5px 0 black,
        -0.5px 0.5px 0 black,
        0.5px 0.5px 0 black; */
}

h4 {
    font-size: 25px;
    text-decoration: underline;
    /* padding-left: 15px; */
    margin-bottom: 10px;
}

p {
    text-indent: 40px;
    max-width: 800px;
    font-size: 18px;
    color: var(--paragraph);
}

.nav-ul {
    display: flex;
    justify-content: space-around;
    list-style: none;
    padding: 0;
}

.nav-li {
    padding-left: 7px;
    padding-right: 7px;
    border-radius: 10px;
}

a {
    text-decoration: none;
    color: var(--paragraph);
    border-radius: 5px;
    padding-left: 10px;
    padding-right: 10px;
    transition: box-shadow .5s, background-color .5s;
}

.link {
    transition: all .3s ease-in-out;
    height: 100%;
    width: 100%;
    text-align: center;
    border-radius: 20px;
    padding-top: 3px;
    display: inline-block;
}

.link:hover {
    background-color: rgb(133, 159, 168, .5);
}

.gray-container {
    background-color: var(--thru-black);
    border: var(--border-color) 1px solid;
    border-radius: 20px;
}

.gray-text-container {
    background-color: var(--see-through-white);
    border: var(--border-color) 1px solid;
    border-radius: 20px;
    padding: 20px;
}

.nav {
    width: 400px;
    position: fixed;
    margin-bottom: 30px;
    top: 20px;
    backdrop-filter: blur(2px);
    z-index: 100;
}

.contact-form {
    padding: 15px;
}

#contact-p {
    width: 90vw;
    max-width: 500px;
}

.home-content {
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.white-fade-background {
    border-radius: 50%;
    width: 100%;
    background: radial-gradient(ellipse at center, white -20%, rgba(255, 255, 255, 0) 72%);
}

.layout-container {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}

.content-wrap {
    display: flex;
    justify-content: center;
    flex: 1;
    position: relative;
}

.page {
    margin: 50px;
}

.page-content {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.p-container {
    width: 80vw;
    max-width: 800px;
    margin-top: 50px;
}

.proj-paragraph {
    margin-top: 20px;
    margin-bottom: 20px;
}

#headshot-circle {
    width: 200px;
    height: 200px;
    display: flex;
    align-items: center;
    justify-content: center;
    border: 1px var(--border-color) solid;
    border-radius: 50%;
    overflow: hidden;
    position: relative;
}

#headshot {
    width: 350px;
    position: absolute;
    top: 0px;
    left: -20px;
}

.statement-link {
    width: 200px;
    border: var(--border-color) 1px solid;
}

#resume-title,
#ethical-statement-title {
    top: 40px;
    margin-bottom: 0;
}

.resume-job-title {
    font-weight: 1000;
    font-size: 19px;
    padding-top: 10px;
}

form {
    display: flex;
    flex-direction: column;
    width: 90vw;
    max-width: 500px;
}

.form-field {
    margin-bottom: 10px;
    height: 30px;
    padding-left: 7px;
    border-color: var(--border-color);
    border-radius: 8px;
    font-family: var(--font-two);
    font-size: 18px;
}

#message {
    height: 100px;
    resize: vertical;
    padding: 8px;
    padding-left: 9px;
}

#submit {
    background-color: rgb(113, 140, 149);
    color: white;
    display: flex;
    align-items: center;
    justify-content: center;
}

#submit:hover {
    background-color: rgb(86, 110, 119);
}

.category-buttons {
    padding: 10px;
    padding-top: 5px;
    padding-bottom: 5px;
}

.category-button {
    background-color: rgba(255,255,255,0%);
    border: none;
    font-family: var(--font-two);
    font-size: 18px;
    padding-top: 5px;
    color: var(--paragraph);
    cursor: pointer; /* Add cursor pointer to indicate interactivity */
    border-radius: 20px;
    transition: all .2s ease-in-out;
}

/* Style for hovered category button */
.category-button:hover {
    background-color: rgba(133, 159, 168, .3); /* Change background color on hover */
}

.cat-but-1 {
    margin-right: 20px;
}

/* Style for selected category button */
.category-button.selected {
    background-color: rgba(133, 159, 168, .6); /* Change background color for selected button */
}

.project-image {
    height: 420px;
    width: 100%;
    max-width: 90vw;
    object-fit: cover;
    object-position: center;
    border-radius: 10px;
    border: var(--border-color) 1px solid;
    box-sizing: border-box;
}

.project-image-wrapper {
    width: 100%;
    position: relative;
    padding-top: 60%;
}

.project-image-wrapper img {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.project-links {
    width: 140px;
    max-width: 100vw;
    height: 30px;
    display: flex;
    justify-content: space-around;
    align-items: center;
    margin-bottom: 20px;
}

.project-name {
    margin-bottom: 10px;
}

.project {
    margin-top: 20px;
    flex: 0 0 48%;
    max-width: 100vw;
}

.projects-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    gap: 20px;
    max-width: 1440px;
}

footer {
    color: black;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color: var(--see-through-white);
    border-top: var(--border-color) 1px solid;
    padding: 20px;
}

.footer-icon {
    width: 40px;
    padding: 5px;
    filter: invert(100%) brightness(40%);
    box-sizing: border-box;
    transition: all .2s ease-in-out;
}

.footer-icon:hover {
    transform: scale(1.1);
}

.popup,
.red-popup {
    transition: opacity 0.5s ease-in-out, visibility 0.5s ease-in-out;
    position: fixed;
    bottom: 20px;
    left: 50%;
    transform: translateX(-50%);
    color: white;
    padding: 10px 20px;
    border-radius: 5px;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
    z-index: 1000;
    visibility: hidden;
    opacity: 0;
}

.popup {
    background-color: green;
}

.red-popup {
    background-color: red;
}

.fade-in {
    visibility: visible;
    opacity: 1;
}

.fade-out {
    visibility: hidden;
    opacity: 0;
}

.icon {
    width: 70px;
    margin-left: 15px;
    margin-right: 15px;
    padding: 10px;
    background-color: white;
    border: black 1px solid;
}

.icons {
    display: flex;
    justify-content: center;
}

.icons-container {
    display: flex;
    justify-content: center;
    padding-top: 15px;
    padding-bottom: 15px;
    margin-bottom: 10px;
}

#python-icon {
    padding-bottom: 1px;
    padding-right: 7px;
}

@media (max-width:1023px) {
    .projects-container {
        display: block;
    }

    #proj-two {
        margin-top: 100px;
    }
}

@media (max-width:768px) {
    a:hover {
        background-color: none;
    }

    a:active {
        background-color: none;
    }

    body {
        background-size: auto;
    }
}

@media (max-width:540px) {
    .nav {
        position: fixed;
        top: 10px;
    }

    h2 {
        margin-top: 40px;
    }

    #my-name {
        font-size: 60px;
    }

    .category-button {
        font-size: 15px;
    }
}

@media (max-width:410px) {
    .nav {
        max-width: 95vw;
    }

    h2 {
        font-size: 60px;
    }

    h3 {
        font-size: 25px;
    }

    .p-container {
        width: 95vw;
    }

    p {
        width: 85vw;
    }

    a {
        padding: 0;
    }
    
    #my-name {
        font-size: 50px;
    }
}

@media (max-width:280px) {
    .nav {
        max-width: 100vw;
    }

    h3 {
        font-size: 20px;
    }
    
    #my-name {
        font-size: 40px;
    }

    .category-button {
        font-size: 13px;
    }
}

